--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cyberpunk",
+  "name": "test",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -7,11 +7,5 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  }
+  "description": ""
 }
